# tcp-tchat

./: .gitignore  CMakeLists.txt  README.md
.github/: cpp-ci.yml
.github/workflows/: cpp-ci.yml
client/: CMakeLists.txt
client/include/: Client.hpp
client/src/: Client.cpp  main_client.cpp
client_qt/: CMakeLists.txt  resources.qrc
client_qt/include/: ChatMessageWidget.hpp  MainWindow.hpp
client_qt/src/: ChatMessageWidget.cpp  MainWindow.cpp  main_qt.cpp
client_qt/styles/: dark.qss
common/: CMakeLists.txt
common/include/: MessageHandler.hpp  ParsedMessage.hpp
common/src/: MessageHandler.cpp
server/: CMakeLists.txt
server/include/: Server.hpp
server/src/: Server.cpp  main_server.cpp
test/: CMakeLists.txt  test_main.cpp
